flights are logged, no buy

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,20 +8,90 @@ body {
 
 
 
-tr{
-  padding: 40px;
+able {
+  margin: 0 auto;
 }
-nav > img {
-  width: 34px;
-  object-fit: contain;
-  margin-right: auto;
-  
+
+h1 {
+  font-size: 30px;
+  margin: 100px auto 10px auto;
 }
-nav{
+
+th {
+  font-weight: 600;
+  font-size: 26px;
+  padding: 10px 50px;
+  border: 2px solid blue;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  background-color: lightgray;
+}
+
+td {
+  font-size: 20px;
   text-align: center;
-  width: auto;
   padding: 10px;
+  border: 2px solid blue;
+}
+
+input, select {
+  font-size: 16px;
+}
+/* a {
+  color: #00B7FF;
+  font-size: 24px;
+} */
+
+.addNewFlight{
+    display: flex;
+    flex-direction: row;
+    text-align: left;
+    margin: 0 auto;
+    width: 30%;
+    font-size: 16px;
+    border: 2px solid blue;
+    border-radius: 20px;
+    padding: 20px 40px;
+}
+
+.showFlight {
+  width: 80%;
+  margin: 0 auto;
+}
+
+label {
+  display: flex;
+}
+
+#addFlightButton, #addDestinationButton, #addTicketButton {
+  font-size: 16px;
+  font-weight: 600;
+  padding: 5px 20px;
+  background-color: lightgreen;
+  border-color: blue;
+  border-radius: 10px;
+  margin: 20px auto;
+  display:flex;
+}
+
+/* styling for navigation bar */
+nav {
+  margin: 0 0 50px 0;
+  display: flex;
+  flex-direction: row;
+  background-color: rgba(0,0,0,0.5);
+  justify-content: center;
+}
+nav a{
   text-decoration: none;
-  background-color: rgba(0,0,0,0.2);
-  
+  color: whitesmoke;
+  font-size: 24px;
+  font-weight: 600;
+  padding: 10px 50px;
+}
+
+nav a:hover{
+  background:royalblue;
+  color: white;
+  border-radius: 10px;
 }
