--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <title> title </title>
+    <title> Express Flights </title>
 </head>
 <body>
         <nav>
-                <img src="/images/airplane.jpg" height="25px" width="auto">
-                <a href="/flights/new" <%- title === 'Add Movie' ? 'class="active"' : '' %>>ADD flights</a>
-                <a href="/flights" <%- title === 'All Movies' ? 'class="active"' : '' %>>ALL flights</a>
+                <img src="/images/airplane.jpg" height="76px" width="auto">
+                <a href="/flights/new"  >ADD flights</a>
+                <a href="/flights"  >ALL flights</a>
+                <a href="/tickets" >Buy tickets</a>
               </nav>
               <main>
-                <h1><%= title %></h1>
+                <h1>Express  Flights </h1>
     
