--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
-</html>
+    <title> title </title>
+</head>
+<body>
+        <nav>
+                <img src="/images/airplane.jpg" height="25px" width="auto">
+                <a href="/flights/new" <%- title === 'Add Flight' ? 'class="active"' : '' %>>ADD flights</a>
+                <a href="/flights" <%- title === 'All Flight' ? 'class="active"' : '' %>>ALL flights</a>
+                <a href="/tickets" <%- title === 'All Flight' ? 'class="active"' : '' %>>Buy tickets</a>
+              </nav>
+              <main>
+                <h1><%= title %></h1>
+               
+              </main>
+            </body>
+            </html>
